...

    func setupImageView() {
        imageView.contentMode = .scaleAspectFit
    }

    func setupAccessibility() {
        scrollView.accessibilityIdentifier = "SingleImageScrollView"
        backButton.accessibilityIdentifier = "BackButton"
    }
}

// MARK: - Image Loading

private extension SingleImageViewController {
...
