...
}

// MARK: - Setup

private extension AuthViewController {
    func setupAccessibility() {
        loginButton.accessibilityIdentifier = "Authenticate"
    }
}

// MARK: - Navigation

private extension AuthViewController {
...
